--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
-Flask
-matplotlib
-jupyter
+Flask==2.3.2
+flask-cors==4.0.0
+numpy==1.24.3
+pandas==2.2.2
+Pillow==10.3.0
+tensorflow==2.15.0
+gunicorn==21.2.0
