--- a/vercel.json
+++ b/vercel.json
@@ -8,8 +8,9 @@
   ],
   "routes": [
     {
-      "src": "/(.*)",
-      "dest": "/app.py"
+      "src": "/.*",
+      "dest": "app.py"
     }
-  ]
+  ],
+  "buildCommand": "./build.sh"
 }
